<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".ui.profile.ProfileFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_photo_profile"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="60dp"
            android:src="@drawable/baseline_person_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="56dp"
            android:text="@string/username"
            app:layout_constraintStart_toEndOf="@+id/iv_photo_profile"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_profile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            app:layout_constraintStart_toEndOf="@+id/iv_photo_profile"
            app:layout_constraintTop_toBottomOf="@+id/tv_profile_name" />

        <TextView
            android:id="@+id/tv_profile_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="12dp"
            android:text="@string/phone"
            app:layout_constraintStart_toEndOf="@+id/iv_photo_profile"
            app:layout_constraintTop_toBottomOf="@+id/tv_profile_email" />
    </androidx.constraintlayout.widget.ConstraintLayout>

<!--    <View-->
<!--        android:id="@+id/view_divider"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="1dp"-->
<!--        android:background="@color/black"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent" />-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_fragment_profile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        tools:listitem="@layout/item_profile" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.dicoding.kelana.custom.ButtonLogin
            android:id="@+id/btn_profile_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Logout"
            app:state="@string/logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>